--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@
     height: 100%;
     flex-direction: column;
     flex: 1;
-    margin-right: 50px;
+    padding-right: 50px;
     overflow-y: auto; /* Enable vertical scrolling */
 }
         #designer-block > div {
@@ -176,7 +176,7 @@
       #home-about{
         display: flex;
         justify-content: start;
-        gap: 30px;
+        gap: 60px;
         align-items: center;
         width: 100%;
       }
