--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@
     max-height: 50%; /* adjust as needed */
 }
 .end-space {
-    min-height: 500px;
+    min-height: 300px;
     width: 100%;
 }
 .hover-target {
@@ -264,10 +264,73 @@ z-index: 200;}
   font-family: "OPS-Italic";
   display: block;
 }
+.quote {
+  display: block;
+  text-indent: -1.5em;
+  padding-left: 1em;
+}
+
+.author {
+  display: block;
+  margin-top: -20px;
+
+}
 
  /* Mobile styles */
  @media only screen and (max-width: 600px) {
-    .letter {
-      font-size: 100px; /* Adjust as needed */
-    }
+  .letter {
+    font-size: 100px; /* Adjust as needed */
   }
+  
+  body {
+    overflow: auto; /* Allow scrolling */
+  }
+
+  #menu-bar{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  #main-container {
+    overflow: auto; /* Allow the main container to scroll */
+    height: auto; /* Allow the height to adjust for content */
+  }
+#home-about{
+  justify-content: space-between;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+    #about-wrapper {
+        flex-direction: column;
+        justify-content: flex-start; /* Align content to the left */
+        overflow: visible; /* Ensure the about wrapper does not scroll separately */
+        height: auto; /* Adjust the height for content */
+        width: 94vw;
+        /* overflow-x: hidden; */
+        padding-right: 0;
+        margin-left: 0; /* Remove margin-left for alignment */
+    }
+#home-button{
+  margin-left: 0;
+}
+
+  #about-text {
+    overflow: visible; /* Ensure the about-text does not scroll separately */
+    height: auto; /* Adjust the height for content */
+    margin-right: 0; /* Adjust margin for mobile view */
+  }
+.mobile-top-space{
+  min-height: 50px;
+}
+.mobile-bottom-space{
+  min-height: 150px;
+}
+  #list-text {
+    overflow-y: visible; /* Remove the scrolling from the list */
+  }
+
+  .hover-img{
+    max-width: 80%;
+    max-height: 180%;
+  }
+}
