--- a/style.css
+++ b/style.css
@@ -330,6 +330,7 @@
 
   /* Mobile styles */
   @media only screen and (max-width: 600px) {
+
     .letter {
       font-size: 100px;
       /* Adjust as needed */
@@ -337,6 +338,7 @@
 
     body {
       overflow: auto;
+      overflow-x: hidden;
       /* Allow scrolling */
     }
 
@@ -360,6 +362,9 @@
       margin-left: 15px;
       margin-right: 15px;
     }
+    ol{
+      margin-left: -10px;
+    }
 
     #about-wrapper {
       font-size: 13px;
@@ -367,7 +372,6 @@
       flex-direction: column;
       justify-content: flex-start;
       /* Align content to the left */
-      overflow: visible;
       /* Ensure the about wrapper does not scroll separately */
       height: auto;
       /* Adjust the height for content */
