--- a/style.css
+++ b/style.css
@@ -257,4 +257,9 @@ ol {
 	.container[data-thumbnail="above"] .about-designer-thumbnail {
 		transform: translateY(-100%);
 	}
+	.title{
+		transform: translateX(-50%) translateY(-100%) scaleY(5);
+
+
+	}
 }
