--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ ol {
 	width: 100vw;
 	height: 100dvh;
 	overflow: hidden;
+	touch-action: manipulation;
 }
 .title {
 	font-size: 14vw;
@@ -204,16 +205,7 @@ ol {
 	pointer-events: none;
 	position: absolute;
 	width: min(600px, calc(100vw - 3.3em));
-	top: .55em;
-	left: 1.1em;
-	transform: translateX(-100%);
 	z-index: 2;
-}
-.container[data-thumbnail="above"] .about-designer-thumbnail {
-	transform: translate(-100%, -100%);
-}
-.about-designer h2:hover ~ .about-designer-thumbnail {
-	display: block;
 }
 .about-designer a {
 	color: black;
@@ -232,6 +224,19 @@ ol {
 	max-width: 800px;
 	color: var(--green);
 	margin-top: 1.1em;
+}
+@media only screen and (min-width: 800px) {
+	.about-designer-thumbnail {
+		top: .55em;
+		left: 1.1em;
+		transform: translateX(-100%);
+	}
+	.container[data-thumbnail="above"] .about-designer-thumbnail {
+		transform: translate(-100%, -100%);
+	}
+	.about-designer h2:hover ~ .about-designer-thumbnail {
+		display: block;
+	}
 }
 @media only screen and (max-width: 800px) {
 	.about {
@@ -259,7 +264,5 @@ ol {
 	}
 	.title{
 		transform: translateX(-50%) translateY(-100%) scaleY(5);
-
-
 	}
 }
